# ball-game

./: .gitignore  config.py  main.py  pyproject.toml
.github/workflows/: ci.yml
src/collisions/: ball_to_ball_collisions.py  collision_handler.py
src/configuration/: configuration.py
src/display/: display.py
src/entity/: entity.py  wall.py
src/entity/ball/: ball.py  ball_factory.py  ball_prototype.py  ball_spawn_config.py  ball_spawn_config_factory.py  face_configuration.py
src/entity/ball/modifiers/: angry_modifier.py  ball_modifier.py  ball_modifiers.py  pulse_modifier.py
src/faces/: face_configuration.py  loaded_face_configuration.py
src/game/: display.py  game.py
src/visuals/: damage_number_effect.py  face_implosion_effect.py  halo_effect.py  implosion_effect.py  visual_effect.py  visual_effect_manager.py
